# PE-Hackathon-Template-2026

./: .env.example  .gitignore  Dockerfile  README.md  ca-certificate.crt  docker-compose.yml  loadbalancer-server-1.conf  loadbalancer-server-2.conf  nginx.conf  pyproject.toml  run.py
.github/workflows/: ci.yaml
app/: __init__.py  database.py  redis.py
app/models/: __init__.py  url.py
app/routes/: __init__.py  redirect.py  shorten.py
app/tests/: test_integration.py  test_redirect.py  test_shorten.py
loadtest/: README.md  result.txt  results_stats.csv  results_stats_history.csv  test.py
postgres/: docker-compose.yml
